// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full e2e test of publish github release creation of all packages 1`] = `
Object {
  "covectoredAction": Object {
    "commandsRan": Object {
      "package-one": Object {
        "command": "## \\\\[2.3.1]

- Added some cool things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-one\\",
  \\"description\\": \\"shrugs\\",
  \\"version\\": \\"2.3.1\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"npm info tauri@0.8.0 description\\",
    \\"test\\": \\"npm info covector@0.1.0 license\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-one/package.json",
            },
            "name": "package-one",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-one-v2.3.1",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
      "package-two": Object {
        "command": "## \\\\[1.9.0]

- Added some even cooler things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-two\\",
  \\"description\\": \\"shrugs\\",
  \\"version\\": \\"1.9.0\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"echo this command is not piped, it is run from scripts for pk2\\",
    \\"test\\": \\"echo this command is not piped, it is run from the test script\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-two/package.json",
            },
            "name": "package-two",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-two-v1.9.0",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
    },
    "pipeTemplate": Object {
      "package-one": Object {
        "name": "package-one",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[2.3.1]

- Added some cool things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-one",
            "pkg": "package-one",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-one",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
          },
        },
      },
      "package-two": Object {
        "name": "package-two",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[1.9.0]

- Added some even cooler things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-two",
            "pkg": "package-two",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-two",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
          },
        },
      },
    },
  },
}
`;

exports[`full e2e test of publish github release creation of single package 1`] = `
Object {
  "covectoredAction": Object {
    "commandsRan": Object {
      "package-one": Object {
        "command": "## \\\\[2.3.1]

- Added some cool things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-one\\",
  \\"version\\": \\"2.3.1\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"npm info tauri@0.8.0 description\\",
    \\"test\\": \\"npm info covector@0.1.0 license\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-one/package.json",
            },
            "name": "package-one",
            "pkg": Object {
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "v2.3.1",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
      "package-three": Object {
        "command": "## \\\\[0.7.5]

- Added some even cooler things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-three",
          "pkg": "package-three",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-three\\",
  \\"version\\": \\"0.7.5\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"echo this command is not piped, it is run from scripts for pk2\\",
    \\"test\\": \\"echo this command is not piped, it is run from the test script\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-three/package.json",
            },
            "name": "package-three",
            "pkg": Object {
              "license": "MIT",
              "name": "package-three",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "0.7.5",
            },
            "version": "0.7.5",
            "versionMajor": 0,
            "versionMinor": 7,
            "versionPatch": 5,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": false,
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
      "package-two": Object {
        "command": "## \\\\[1.9.0]

- Added some even cooler things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-two\\",
  \\"version\\": \\"1.9.0\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"echo this command is not piped, it is run from scripts for pk2\\",
    \\"test\\": \\"echo this command is not piped, it is run from the test script\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-two/package.json",
            },
            "name": "package-two",
            "pkg": Object {
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": false,
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
    },
    "pipeTemplate": Object {
      "package-one": Object {
        "name": "package-one",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[2.3.1]

- Added some cool things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-one",
            "pkg": "package-one",
            "postcommand": null,
            "precommand": null,
            "releaseTag": "v\${ pkgFile.version }",
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-one",
            "pkg": Object {
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
          },
        },
      },
      "package-three": Object {
        "name": "package-three",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[0.7.5]

- Added some even cooler things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-three",
            "pkg": "package-three",
            "postcommand": null,
            "precommand": null,
            "releaseTag": false,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-three",
            "pkg": Object {
              "license": "MIT",
              "name": "package-three",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "0.7.5",
            },
            "version": "0.7.5",
            "versionMajor": 0,
            "versionMinor": 7,
            "versionPatch": 5,
          },
        },
      },
      "package-two": Object {
        "name": "package-two",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[1.9.0]

- Added some even cooler things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-two",
            "pkg": "package-two",
            "postcommand": null,
            "precommand": null,
            "releaseTag": false,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-two",
            "pkg": Object {
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
          },
        },
      },
    },
  },
}
`;

exports[`full e2e test of publish github release update of all packages 1`] = `
Object {
  "covectoredAction": Object {
    "commandsRan": Object {
      "package-one": Object {
        "command": "## \\\\[2.3.1]

- Added some cool things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-one\\",
  \\"description\\": \\"shrugs\\",
  \\"version\\": \\"2.3.1\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"npm info tauri@0.8.0 description\\",
    \\"test\\": \\"npm info covector@0.1.0 license\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-one/package.json",
            },
            "name": "package-one",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-one-v2.3.1",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
      "package-two": Object {
        "command": "## \\\\[1.9.0]

- Added some even cooler things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-two\\",
  \\"description\\": \\"shrugs\\",
  \\"version\\": \\"1.9.0\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"echo this command is not piped, it is run from scripts for pk2\\",
    \\"test\\": \\"echo this command is not piped, it is run from the test script\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-two/package.json",
            },
            "name": "package-two",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-two-v1.9.0",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
    },
    "pipeTemplate": Object {
      "package-one": Object {
        "name": "package-one",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[2.3.1]

- Added some cool things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-one",
            "pkg": "package-one",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-one",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
          },
        },
      },
      "package-two": Object {
        "name": "package-two",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[1.9.0]

- Added some even cooler things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-two",
            "pkg": "package-two",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-two",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
          },
        },
      },
    },
  },
}
`;

exports[`full e2e test of publish github release update of single package 1`] = `
Object {
  "covectoredAction": Object {
    "commandsRan": Object {
      "package-one": Object {
        "command": "## \\\\[2.3.1]

- Added some cool things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-one\\",
  \\"version\\": \\"2.3.1\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"npm info tauri@0.8.0 description\\",
    \\"test\\": \\"npm info covector@0.1.0 license\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-one/package.json",
            },
            "name": "package-one",
            "pkg": Object {
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "v2.3.1",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
      "package-three": Object {
        "command": "## \\\\[0.7.5]

- Added some even cooler things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-three",
          "pkg": "package-three",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-three\\",
  \\"version\\": \\"0.7.5\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"echo this command is not piped, it is run from scripts for pk2\\",
    \\"test\\": \\"echo this command is not piped, it is run from the test script\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-three/package.json",
            },
            "name": "package-three",
            "pkg": Object {
              "license": "MIT",
              "name": "package-three",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "0.7.5",
            },
            "version": "0.7.5",
            "versionMajor": 0,
            "versionMinor": 7,
            "versionPatch": 5,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": false,
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
      "package-two": Object {
        "command": "## \\\\[1.9.0]

- Added some even cooler things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-two\\",
  \\"version\\": \\"1.9.0\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"echo this command is not piped, it is run from scripts for pk2\\",
    \\"test\\": \\"echo this command is not piped, it is run from the test script\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-two/package.json",
            },
            "name": "package-two",
            "pkg": Object {
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": false,
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
    },
    "pipeTemplate": Object {
      "package-one": Object {
        "name": "package-one",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[2.3.1]

- Added some cool things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-one",
            "pkg": "package-one",
            "postcommand": null,
            "precommand": null,
            "releaseTag": "v\${ pkgFile.version }",
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-one",
            "pkg": Object {
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
          },
        },
      },
      "package-three": Object {
        "name": "package-three",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[0.7.5]

- Added some even cooler things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-three",
            "pkg": "package-three",
            "postcommand": null,
            "precommand": null,
            "releaseTag": false,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-three",
            "pkg": Object {
              "license": "MIT",
              "name": "package-three",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "0.7.5",
            },
            "version": "0.7.5",
            "versionMajor": 0,
            "versionMinor": 7,
            "versionPatch": 5,
          },
        },
      },
      "package-two": Object {
        "name": "package-two",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[1.9.0]

- Added some even cooler things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-two",
            "pkg": "package-two",
            "postcommand": null,
            "precommand": null,
            "releaseTag": false,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-two",
            "pkg": Object {
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
          },
        },
      },
    },
  },
}
`;

exports[`full e2e test of publish input 1`] = `
Array [
  Array [
    "There is 2 packages ready to publish which includes package-one@2.3.1, package-two@1.9.0",
  ],
  Array [
    "package-one [publish]: echo publish",
  ],
  Array [
    "publish",
  ],
  Array [
    "creating Github Release for package-one@2.3.1",
  ],
  Array [
    "releaseId",
    undefined,
  ],
  Array [
    "release created: ",
    Object {
      "body": "## \\\\[2.3.1]

- Added some cool things.

publish

",
      "draft": false,
      "name": "package-one v2.3.1",
      "owner": "genericOwner",
      "repo": "genericRepo",
      "tag_name": "package-one-v2.3.1",
      "target_commitish": undefined,
    },
  ],
  Array [
    "package-two [publish]: echo publish",
  ],
  Array [
    "publish",
  ],
  Array [
    "creating Github Release for package-two@1.9.0",
  ],
  Array [
    "releaseId",
    undefined,
  ],
  Array [
    "release created: ",
    Object {
      "body": "## \\\\[1.9.0]

- Added some even cooler things.

publish

",
      "draft": false,
      "name": "package-two v1.9.0",
      "owner": "genericOwner",
      "repo": "genericRepo",
      "tag_name": "package-two-v1.9.0",
      "target_commitish": undefined,
    },
  ],
  Array [
    "The covector output: {
  \\"package-one\\": {
    \\"precommand\\": false,
    \\"command\\": \\"## \\\\\\\\[2.3.1]\\\\n\\\\n- Added some cool things.\\\\n\\\\npublish\\\\n\\",
    \\"postcommand\\": false,
    \\"pkg\\": {
      \\"pkg\\": \\"package-one\\",
      \\"pkgFile\\": {
        \\"file\\": {
          \\"content\\": \\"{\\\\n  \\\\\\"name\\\\\\": \\\\\\"package-one\\\\\\",\\\\n  \\\\\\"description\\\\\\": \\\\\\"shrugs\\\\\\",\\\\n  \\\\\\"version\\\\\\": \\\\\\"2.3.1\\\\\\",\\\\n  \\\\\\"license\\\\\\": \\\\\\"MIT\\\\\\",\\\\n  \\\\\\"scripts\\\\\\": {\\\\n    \\\\\\"build\\\\\\": \\\\\\"npm info tauri@0.8.0 description\\\\\\",\\\\n    \\\\\\"test\\\\\\": \\\\\\"npm info covector@0.1.0 license\\\\\\"\\\\n  }\\\\n}\\\\n\\",
          \\"path\\": \\"packages/package-one/package.json\\",
          \\"filename\\": \\"package\\",
          \\"extname\\": \\".json\\"
        },
        \\"version\\": \\"2.3.1\\",
        \\"versionMajor\\": 2,
        \\"versionMinor\\": 3,
        \\"versionPatch\\": 1,
        \\"versionPrerelease\\": null,
        \\"pkg\\": {
          \\"name\\": \\"package-one\\",
          \\"description\\": \\"shrugs\\",
          \\"version\\": \\"2.3.1\\",
          \\"license\\": \\"MIT\\",
          \\"scripts\\": {
            \\"build\\": \\"npm info tauri@0.8.0 description\\",
            \\"test\\": \\"npm info covector@0.1.0 license\\"
          }
        },
        \\"name\\": \\"package-one\\"
      },
      \\"path\\": \\"./packages/package-one\\",
      \\"manager\\": \\"javascript\\",
      \\"precommand\\": null,
      \\"command\\": [
        {
          \\"command\\": \\"echo publish\\",
          \\"pipe\\": true
        },
        null
      ],
      \\"postcommand\\": null,
      \\"errorOnVersionRange\\": null,
      \\"releaseTag\\": \\"package-one-v2.3.1\\"
    },
    \\"published\\": true
  },
  \\"package-two\\": {
    \\"precommand\\": false,
    \\"command\\": \\"## \\\\\\\\[1.9.0]\\\\n\\\\n- Added some even cooler things.\\\\n\\\\npublish\\\\n\\",
    \\"postcommand\\": false,
    \\"pkg\\": {
      \\"pkg\\": \\"package-two\\",
      \\"pkgFile\\": {
        \\"file\\": {
          \\"content\\": \\"{\\\\n  \\\\\\"name\\\\\\": \\\\\\"package-two\\\\\\",\\\\n  \\\\\\"description\\\\\\": \\\\\\"shrugs\\\\\\",\\\\n  \\\\\\"version\\\\\\": \\\\\\"1.9.0\\\\\\",\\\\n  \\\\\\"license\\\\\\": \\\\\\"MIT\\\\\\",\\\\n  \\\\\\"scripts\\\\\\": {\\\\n    \\\\\\"build\\\\\\": \\\\\\"echo this command is not piped, it is run from scripts for pk2\\\\\\",\\\\n    \\\\\\"test\\\\\\": \\\\\\"echo this command is not piped, it is run from the test script\\\\\\"\\\\n  }\\\\n}\\\\n\\",
          \\"path\\": \\"packages/package-two/package.json\\",
          \\"filename\\": \\"package\\",
          \\"extname\\": \\".json\\"
        },
        \\"version\\": \\"1.9.0\\",
        \\"versionMajor\\": 1,
        \\"versionMinor\\": 9,
        \\"versionPatch\\": 0,
        \\"versionPrerelease\\": null,
        \\"pkg\\": {
          \\"name\\": \\"package-two\\",
          \\"description\\": \\"shrugs\\",
          \\"version\\": \\"1.9.0\\",
          \\"license\\": \\"MIT\\",
          \\"scripts\\": {
            \\"build\\": \\"echo this command is not piped, it is run from scripts for pk2\\",
            \\"test\\": \\"echo this command is not piped, it is run from the test script\\"
          }
        },
        \\"name\\": \\"package-two\\"
      },
      \\"path\\": \\"./packages/package-two\\",
      \\"manager\\": \\"javascript\\",
      \\"precommand\\": null,
      \\"command\\": [
        {
          \\"command\\": \\"echo publish\\",
          \\"pipe\\": true
        },
        null
      ],
      \\"postcommand\\": null,
      \\"errorOnVersionRange\\": null,
      \\"releaseTag\\": \\"package-two-v1.9.0\\"
    },
    \\"published\\": true
  }
}",
  ],
]
`;

exports[`full e2e test of publish input 2`] = `
Object {
  "covectoredAction": Object {
    "commandsRan": Object {
      "package-one": Object {
        "command": "## \\\\[2.3.1]

- Added some cool things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-one\\",
  \\"description\\": \\"shrugs\\",
  \\"version\\": \\"2.3.1\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"npm info tauri@0.8.0 description\\",
    \\"test\\": \\"npm info covector@0.1.0 license\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-one/package.json",
            },
            "name": "package-one",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-one-v2.3.1",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
      "package-two": Object {
        "command": "## \\\\[1.9.0]

- Added some even cooler things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-two\\",
  \\"description\\": \\"shrugs\\",
  \\"version\\": \\"1.9.0\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"echo this command is not piped, it is run from scripts for pk2\\",
    \\"test\\": \\"echo this command is not piped, it is run from the test script\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-two/package.json",
            },
            "name": "package-two",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-two-v1.9.0",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
    },
    "pipeTemplate": Object {
      "package-one": Object {
        "name": "package-one",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[2.3.1]

- Added some cool things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-one",
            "pkg": "package-one",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-one",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
          },
        },
      },
      "package-two": Object {
        "name": "package-two",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[1.9.0]

- Added some even cooler things.
",
            "command": Array [
              Object {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-two",
            "pkg": "package-two",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-two",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
          },
        },
      },
    },
  },
}
`;

exports[`full e2e test of publish output 1`] = `
Object {
  "covectoredAction": Object {
    "commandsRan": Object {
      "package-one": Object {
        "command": "## \\\\[2.3.1]

- Added some cool things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-one\\",
  \\"description\\": \\"shrugs\\",
  \\"version\\": \\"2.3.1\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"npm info tauri@0.8.0 description\\",
    \\"test\\": \\"npm info covector@0.1.0 license\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-one/package.json",
            },
            "name": "package-one",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-one-v2.3.1",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
      "package-two": Object {
        "command": "## \\\\[1.9.0]

- Added some even cooler things.

publish
",
        "pkg": Object {
          "command": Array [
            Object {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "pkgFile": Object {
            "file": Object {
              "content": "{
  \\"name\\": \\"package-two\\",
  \\"description\\": \\"shrugs\\",
  \\"version\\": \\"1.9.0\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"build\\": \\"echo this command is not piped, it is run from scripts for pk2\\",
    \\"test\\": \\"echo this command is not piped, it is run from the test script\\"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-two/package.json",
            },
            "name": "package-two",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-two-v1.9.0",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
    },
    "pipeTemplate": Object {
      "package-one": Object {
        "name": "package-one",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[2.3.1]

- Added some cool things.
",
            "command": Object {
              "command": "echo publish",
              "pipe": true,
            },
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-one",
            "pkg": "package-one",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-one",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": Object {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
          },
        },
      },
      "package-two": Object {
        "name": "package-two",
        "pipe": Object {
          "pkg": Object {
            "changelog": "## \\\\[1.9.0]

- Added some even cooler things.
",
            "command": Object {
              "command": "echo publish",
              "pipe": true,
            },
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-two",
            "pkg": "package-two",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": Object {
            "name": "package-two",
            "pkg": Object {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": Object {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
          },
        },
      },
    },
  },
}
`;

exports[`full e2e test of status output 1`] = `
Object {
  "covectoredAction": undefined,
}
`;

exports[`full e2e test of version output 1`] = `
Object {
  "covectoredAction": undefined,
}
`;

exports[`full e2e test of version output 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "commandRan",
      "version",
    ],
    Array [
      "status",
      "No changes.",
    ],
    Array [
      "templatePipe",
      Object {},
    ],
    Array [
      "change",
      "# Version Updates

Merging this PR will release new versions of the following packages based on your change files.

",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
